--- a/src/bienvenida.css
+++ b/src/bienvenida.css
@@ -93,3 +93,17 @@ h1{
     text-transform: uppercase;
     letter-spacing: 1rem;
 }
+button {
+  background-color: var(--fiona-purple);
+  color: white;
+  border: none;
+  padding: 12px 24px;
+  border-radius: 8px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color:#C37ED0 ;
+}
