--- a/src/trivia.css
+++ b/src/trivia.css
@@ -1,9 +1,17 @@
 @import './global.css';
 body{
     background-color: var( --swamp-green);
+    margin-top: 0;
+    margin-bottom: 0;
 }
 .welcome-ogre{
-color: var(--fiona-purple);
+   color: var(--donkey-brown);
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin: 20px ;
+    font-family: 'DM Sans';
+  
 }
 .container-questions{
     display: flex;
@@ -14,22 +22,25 @@ color: var(--fiona-purple);
 }
 .container-form{
     max-width: 700px;
-    background-color: var(--fiona-purple);
+    background-color: var(--ogre-green);
 }
 .questions-father{
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(1,1fr);
-    margin-bottom: 1rem;
+
     padding: 20px;
 }
 section{
     display: flex;
     align-items: center;
     gap: 20px;
-    background-color: var(--far-far-away-sky-blue);
+    background-color: var(--swamp-green);
     border-radius: 20px;
-    padding: 20px
+    padding: 20px;
+    color: var(--donkey-brown);
+    font-family: "Poppins";
+      
 }
 
 p{
@@ -62,7 +73,60 @@ p{
 
 img{
     width: 200px;
-    height: 100px;
+    height: 150px;
     border-radius: 20px;
     object-fit: cover;
 }
+.container-btn{
+    padding: 20px;
+    display:  flex;
+    justify-content: flex-end;
+}
+button {
+    background-color: var(--fiona-purple);
+    color: white;
+    border: none;
+    padding: 12px 24px;
+    border-radius: 8px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  button:hover {
+    background-color:#C37ED0 ;
+  }
+  .modal{
+    display: none; /* Hidden by default */
+    position: absolute; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    color: black;
+  }
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  .close {
+    color: #565255;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
