--- a/src/trivia.css
+++ b/src/trivia.css
@@ -1,37 +1,43 @@
 @import './global.css';
-body{
-    background-color: var( --swamp-green);
+
+body {
+    background-color: var(--swamp-green);
     margin-top: 0;
     margin-bottom: 0;
 }
-.welcome-ogre{
-   color: var(--donkey-brown);
+
+.welcome-ogre {
+    color: var(--donkey-brown);
     font-size: 24px;
     font-weight: bold;
     text-align: center;
-    margin: 20px ;
+    margin: 20px;
     font-family: 'DM Sans';
-  
+
 }
-.container-questions{
+
+.container-questions {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-   
+
 }
-.container-form{
+
+.container-form {
     max-width: 700px;
     background-color: var(--ogre-green);
 }
-.questions-father{
+
+.questions-father {
     display: grid;
     gap: 20px;
-    grid-template-columns: repeat(1,1fr);
+    grid-template-columns: repeat(1, 1fr);
 
     padding: 20px;
 }
-section{
+
+section {
     display: flex;
     align-items: center;
     gap: 20px;
@@ -40,49 +46,51 @@ section{
     padding: 20px;
     color: var(--donkey-brown);
     font-family: "Poppins";
-      
+
 }
 
-p{
+p {
     padding: 0;
-    margin:0 ;
+    margin: 0;
 }
 
 .container-answer {
     display: flex;
     align-items: center;
-    gap: 10px;
     flex-direction: column;
 
 }
 
-.divisor{
+.divisor {
     display: grid;
-    grid-template-columns: repeat(1,1fr);
-    
+    grid-template-columns: repeat(1, 1fr);
     width: 100%;
 }
+
 .container-answer .input-group {
     display: flex;
     align-items: center;
 }
+
 .container-answer input[type="radio"] {
     margin-right: 5px;
 }
 
 
-img{
+img {
     width: 200px;
     height: 150px;
     border-radius: 20px;
     object-fit: cover;
 }
-.container-btn{
+
+.container-btn {
     padding: 20px;
-    display:  flex;
+    display: flex;
     justify-content: flex-end;
 }
-button {
+
+.btn-custom {
     background-color: var(--fiona-purple);
     color: white;
     border: none;
@@ -91,42 +99,8 @@ button {
     font-size: 18px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-  }
-  
-  button:hover {
-    background-color:#C37ED0 ;
-  }
-  .modal{
-    display: none; /* Hidden by default */
-    position: absolute; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    color: black;
-  }
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
-  .close {
-    color: #565255;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
+}
+
+.btn-custom:hover {
+    background-color: #C37ED0;
+}
