--- a/trivia.css
+++ b/trivia.css
@@ -44,9 +44,15 @@ section {
     background-color: var(--swamp-green);
     border-radius: 20px;
     padding: 20px;
+    flex-direction: column;
     color: var(--donkey-brown);
     font-family: "Poppins";
-
+    transition: border-color 0.3s ease;
+    border: 2px solid var(--donkey-brown);
+}
+section:hover {
+    border-color: var(--fiona-purple); /* Cambia el color del borde en el hover */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Agrega una sombra sutíl */
 }
 
 p {
@@ -58,7 +64,7 @@ p {
     display: flex;
     align-items: center;
     flex-direction: column;
-
+   width: 100%;
 }
 
 .divisor {
@@ -78,7 +84,7 @@ p {
 
 
 img {
-    width: 200px;
+    width: 100%;
     height: 150px;
     border-radius: 20px;
     object-fit: cover;
@@ -104,3 +110,16 @@ img {
 .btn-custom:hover {
     background-color: #C37ED0;
 }
+ @media (min-width: 768px) {
+  
+section{
+    flex-direction: row;
+}
+img{
+    width: 100%;
+    height: 150px;
+}
+ }
+
+
+
